--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -4,10 +4,11 @@ NODE_ENV=development
 CORS_ORIGIN=http://localhost:xxxx
 
 ACCESS_TOKEN_SECRET=
-ACCESS_TOKEN_EXPIRY=1d
+ACCESS_TOKEN_EXPIRY=
 
 REFRESH_TOKEN_SECRET=
-REFRESH_TOKEN_EXPIRY=20d
+REFRESH_TOKEN_EXPIRY=
+REFRESH_TOKEN_EXPIRY_DAYS=
 
 DB_HOST=
 DB_USER=
