--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -10,6 +10,8 @@ REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=
 REFRESH_TOKEN_EXPIRY_DAYS=
 
+RESET_TOKEN_SECRET=
+
 DB_HOST=
 DB_USER=
 DB_PASSWORD=
@@ -18,3 +20,8 @@ DB_NAME=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
