--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -10,7 +10,7 @@ REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=
 REFRESH_TOKEN_EXPIRY_DAYS=
 
-RESET_TOKEN_SECRET=
+PASSWORD_RESET_TOKEN_SECRET=
 
 DB_HOST=
 DB_USER=
