--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,12 @@
     "express": "^4.22.1",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "mysql2": "^3.16.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12"
   },
   "devDependencies": {
