--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend service (owned by backend-dev branch)",
   "main": "index.js",
   "scripts": {
-    "start": "node -r dotenv/config --experimental-json-modules src/index.js",
+    "start": "node src/index.js",
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [],
